--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.3",
         "maatwebsite/excel": "^3.1",
+        "mike42/escpos-php": "^4.0",
         "milon/barcode": "^8.0",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
